FileUploadMain.jsp completed

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>File_Upload</name>
+	<name>13File_Upload</name>
 	<comment></comment>
 	<projects>
 	</projects>
